@@ -3,6 +3,9 @@
 
 - make devpi-client work with python3.3 and fix test bugs 
 
+- add "devpi test -c tox.ini package" to use a particular (external)
+  tox.ini for running tox with the unpackaged package
+
 - new "devpi use --set-cfg" option to set pip/easy_install configuration
   files when changing indexes.  Also new "devpi use --always-set-cfg=yes"
   option if you want to imply "--set-cfg" on future "devpi use" invocations
